plugins/kotlin/idea/tests/testData/multiplatform/diamondSeesTwoActuals/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in [left, right] modules'")!>A<!> {
    fun <!LINE_MARKER("descr='Has actuals in [left, right] modules'")!>foo<!>(): Int
}
